--- a/package.json
+++ b/package.json
@@ -22,9 +22,19 @@
     "@angular/router": "~8.2.14",
     "@capacitor/core": "2.1.0",
     "@ionic-native/core": "^5.0.7",
+    "@ionic-native/device-motion": "^5.25.0",
+    "@ionic-native/flashlight": "^5.25.0",
+    "@ionic-native/gyroscope": "^5.25.0",
+    "@ionic-native/screen-orientation": "^5.25.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
+    "@ionic-native/vibration": "^5.25.0",
     "@ionic/angular": "^5.0.0",
+    "cordova-plugin-device-motion": "^2.0.1",
+    "cordova-plugin-flashlight": "^3.2.0",
+    "cordova-plugin-gyroscope": "^0.1.4",
+    "cordova-plugin-screen-orientation": "^3.0.2",
+    "cordova-plugin-vibration": "^3.1.1",
     "core-js": "^2.5.4",
     "firebase": "^7.14.2",
     "rxjs": "~6.5.1",
@@ -55,5 +65,14 @@
     "tslint": "~5.15.0",
     "typescript": "~3.4.3"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-device-motion": {},
+      "cordova-plugin-flashlight": {},
+      "cordova-plugin-vibration": {},
+      "cordova-plugin-screen-orientation": {},
+      "cordova-plugin-gyroscope": {}
+    }
+  }
 }
